<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MecanicasGenerales.ActivityRegistrarUsuarios">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="375dp"
                android:layout_height="875dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/edNombre"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/txtNombre"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

            <EditText
                android:id="@+id/edApellido1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtApellido1"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.138" />

            <EditText
                android:id="@+id/edApellido2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtApellido2"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.221" />

            <EditText
                android:id="@+id/edEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:hint="@string/edad"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.098"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.31" />

            <EditText
                android:id="@+id/edCorreoElectronico"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.397" />

            <EditText
                android:id="@+id/edContraseña1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.484" />

            <EditText
                android:id="@+id/edContraseña2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/repetirContraseña"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.579" />

            <EditText
                android:id="@+id/edCurp"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/curp"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.661" />

            <EditText
                android:id="@+id/edFechaNacimiento"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/txtFechaNacimiento"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.143"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.833" />

            <Spinner
                android:id="@+id/municipio"
                android:layout_width="270dp"
                android:layout_height="45dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.219"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.742" />

            <Button
                android:id="@+id/btnImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/txtImagen"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.46"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.927" />

            <Button
                android:id="@+id/btnRegistar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtRegistrar"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.463"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.99" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>