<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecretariaEstudioCuenta.ActivityVisorDemandSecretaria">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMensaje4"
                android:layout_width="360dp"
                android:layout_height="188dp"
                android:layout_marginTop="744dp"
                android:layout_marginBottom="8dp"
                android:textSize="36sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/btnModificar"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.697" />

            <TextView
                android:id="@+id/txtMensaje3"
                android:layout_width="360dp"
                android:layout_height="188dp"
                android:layout_marginTop="332dp"
                android:layout_marginBottom="8dp"
                android:textSize="36sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/btnModificar"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.129"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.697" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="356dp"
                android:layout_height="121dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.096" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="391dp"
                android:layout_height="1354dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/txtTipoDemanda"
                android:layout_width="182dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.039"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.027" />

            <TextView
                android:id="@+id/txtFisPrueba"
                android:layout_width="281dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/title_activity_home_fiscalia"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.039"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.452" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewCiudadanoSecretaria"
                android:layout_width="361dp"
                android:layout_height="303dp"
                android:layout_marginTop="264dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewFiscaliaSecretaria"
                android:layout_width="358dp"
                android:layout_height="353dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.123"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.655" />

            <Button
                android:id="@+id/btnAgendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/btnAgendar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.026"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.921" />

            <EditText
                android:id="@+id/edFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/edFechaDemanda"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.795" />

            <EditText
                android:id="@+id/edHora"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/txtHora"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.858" />

            <EditText
                android:id="@+id/edMinutos"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/txtMinutos"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.641"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.857" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>